<resources>
    <string name="app_name">56金服</string>
    <string name="object_detail">标的详情</string>
    <string name="text_title_back">返回</string>
    <string name="tab1">56金服</string>
    <string name="tab2">投资</string>
    <string name="tab3">发现</string>
    <string name="tab4">我的</string>
    <string name="contact_service">联系客服</string>
    <string name="play_make_center">玩赚中心</string>
    <string name="personal_not_login">登录后才能查看哦</string>
    <string name="not_notwork">wifi和移动数据已断开</string>
    <string name="main_home">首页</string>
    <string name="main_hot_recommend">热门推荐</string>
    <string name="main_invest_immediate">马上投资</string>
    <string name="main_consult_customer">咨询客服</string>
    <string name="main_invest_hint">市场有风险 投资需谨慎</string>
    <string name="main_depository_account">存管开户</string>
    <string name="main_sole_proprietor">资金银行存管</string>
    <string name="main_novice_head_cast">新手首投</string>
    <string name="main_novice_plus">立享新手加息</string>
    <string name="main_register">注册</string>
    <string name="main_find">发现</string>
    <string name="main_find_depository_guide">存管指南</string>
    <string name="main_find_invite_have_gift">邀请有礼</string>
    <string name="main_find_vip">尊享俱乐部</string>
    <string name="main_find_information_disclosure">信息披露</string>
    <string name="main_find_investment_classroom">投资课堂</string>
    <string name="main_find_hot">热门推荐</string>
    <string name="person_info">个人信息</string>
    <string name="person_info_name">姓名:</string>
    <string name="person_info_name1">姓名</string>
    <string name="person_info_id">身份证:</string>
    <string name="person_info_id1">身份证号</string>
    <string name="person_info_phone">手机:</string>
    <string name="person__security_settings">系统安全设置</string>
    <string name="person_touch_id">开启Touch ID指纹解锁</string>
    <string name="person_gesture_password">开启手势密码</string>
    <string name="person_other_info">其它信息</string>
    <string name="person_tel_number">登录手机号</string>
    <string name="person_login_password">登录密码</string>
    <string name="person_pay_password">交易密码</string>
    <string name="person_push_settings">推送设置</string>
    <string name="person_version_info">版本信息</string>
    <string name="person_about_us">关于我们</string>
    <string name="person_contact_us">联系我们</string>
    <string name="person_login_out">退出登录</string>
    <string name="person_total_assets">总资产</string>
    <string name="person_open_depository_account">开通银行存管账户</string>
    <string name="accout_info">账户信息</string>
    <string name="accout_bind_phone">已绑定手机</string>
    <string name="accout_authentication">实名认证</string>
    <string name="accout_authentication_bankcard">实名绑卡</string>
    <string name="accout_bind_bank">绑定银行卡</string>
    <string name="accout_balance_manager">账户余额管理</string>
    <string name="accout_safe">账户安全</string>
    <string name="accout_modify_detail">修改交易密码</string>
    <string name="accout_hand_password">手势密码</string>
    <string name="accout_modify_hand">修改手势密码</string>
    <string name="accout_modify_set_hand">设置手势密码</string>
    <string name="accout_set_detail">设置交易密码</string>
    <string name="accout_modify_password">更改登录密码</string>
    <string name="risk_assessment_hint1">恭喜！已开通银行存管账户</string>
    <string name="risk_assessment_hint2">为了向您提供更优质的服务，保护您的合法权益\n请您配合完成风险评测问卷</string>
    <string name="start_risk_assessment">恭喜！已开通银行存管账户</string>
    <string name="send_verification_code">获取验证码</string>
    <string name="input_verification_code">请输入验证码</string>
    <string name="input_password">登录密码</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_new_phone">请输入新的手机号码</string>
    <string name="quick_register">快速注册</string>
    <string name="phone">手机号码</string>
    <string name="comfirm_modify">确认修改</string>
    <string name="input_set_password_again">请再次输入新密码</string>
    <string name="input_input_password_again">请再次输入登录密码</string>
    <string name="btn_user_register">新用户注册</string>
    <string name="hint_set_password">请设置登录密码</string>
    <string name="btn_forget_password">忘记密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_check_login">为保障您的账号安全，当前设备需进行身份验证\n通过后下次无需验证</string>
    <string name="btn_dync_login">动态密码登录</string>
    <string name="hint_name">请填写客户姓名</string>
    <string name="identity_card">身份证</string>
    <string name="hint_identity_card">请填写客户身份证号码</string>
    <string name="person_set_pay_password">设置交易密码</string>
    <string name="please_input_password">请输入登录密码</string>
    <string name="hint_pay_password">设置存管账户交易密码</string>
    <string name="re_pay_password">确认交易密码</string>
    <string name="hint_re_pay_password">再次确认交易密码</string>
    <string name="login_btn_ok">确定</string>
    <string name="login_input_verify">请输入短信验证码</string>
    <string name="login_send_verify">发送验证码</string>
    <string name="login_change">更改</string>
    <string name="login_close">关闭</string>
    <string name="login_start_check">开始验证</string>
    <string name="hint_please_phone">在这里输入电话号码</string>
    <string name="text_invitation_code">我有邀请码</string>
    <string name="hint_input_invitation">请输入邀请码（选填）</string>
    <string name="btn_new_register">注册领取现金红包</string>
    <string name="text_register_protocol">注册即代表您已阅读并同意《56金服注册协议》、《隐私协议》</string>
    <string name="registration_protocol">《56金服注册协议》</string>
    <string name="privacy_agreement">《隐私协议》</string>
    <string name="text_have_count">已有账号，立即登录</string>
    <string name="send_sms_phone">已发送短信验证码到</string>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="hint_password_rule">8-20位字符，必须包含数字加英文字母</string>
    <string name="check_hint_password_rule">请输入8-20位字符，必须包含数字加英文字母</string>
    <string name="btn_complete_register">完成注册</string>
    <string name="register_nouser_invitation_code">不使用邀请码</string>
    <string name="login_sms">短信登录</string>
    <string name="login_password">账号登录</string>
    <string name="loging_register_red_envelope">立即注册领红包</string>
    <string name="login_please_set_password">请设置登录密码</string>
    <string name="login_set_password_hint">为保障您的资金安全，请您设置登录密码</string>
    <string-array name="select_bar_first_page">
        <item>风险管理</item>
        <item>信息披露</item>
        <item>邀请有礼</item>
        <item>我的消息</item>
    </string-array>
    <string name="recharge_invest_protocol">我已阅读并同意《用户快捷充值协议》、《充值提现规则说明》</string>
    <string name="recharge_user_quick_recharge_protocol">《用户快捷充值协议》</string>
    <string name="recharge_prepaid_withdrawal_rules">《充值提现规则说明》</string>
    <string name="withdraw_to_account_money">实际到账金额</string>
    <string name="withdraw_charge">提现手续费</string>
    <string name="withdraw_next">下一步</string>
    <string name="withdraw_rule">提现规则：</string>
    <string name="withdraw_rule_detail">1.单笔提现最小金额为20元。 \n\n2.用户每月享受100次免费提现服务。 \n\n3.超次数提现手续费每笔1.0元，在提现金额中扣除。 \n\n4.用户可通过参与平台活动获取更多免费提现券。 \n\n5.用户提现工作日时间2小时内到账，非工作日时间最长T+1到账。</string>
    <string name="invest_deposit_bounses">红包</string>
    <string name="invest_deposit_coupon">优惠券</string>
    <string name="transfer_letter_of_commitment">我已阅读并同意《债权转让协议》、《网络借贷风险和禁止性行为提示书》、《反洗钱、反恐怖融资承诺书》、《个人电子签章授权委托书》。</string>
    <string name="transfer_commitment">我已阅读并同意《借款合同》、《网络借贷风险和禁止性行为提示书》、《反洗钱、反恐怖融资承诺书》、《个人电子签章授权委托书》。</string>
    <string name="transfer_commitment1">我已同意《债权转让协议》并委托平台自动签署，查看协议范本。</string>
    <string name="assignment_of_claims">《债权转让协议》</string>
    <string name="agree_assignment_of_claims">您已阅读并同意《债权转让协议》</string>
    <string name="loan_contract">《借款合同》</string>
    <string name="lending_network_hint">《网络借贷风险和禁止性行为提示书》</string>
    <string name="funds_legal_undertaking">《反洗钱、反恐怖融资承诺书》</string>
    <string name="signature_seal_attorney">《个人电子签章授权委托书》</string>
    <string name="investment_interest_time">起息时间</string>
    <string name="investment_interest_time_hint">放款日(放款前每日按年化8%补贴)</string>
    <string name="investment_expected_earn">预期年化收益（元）</string>
    <string name="investment_available_balance">可用余额</string>
    <string name="investment_immede_investment">立即投资</string>
    <string name="investment_expected_earn_rate">协议约定年化利率</string>
    <string name="investment_lockup_period">锁定期(天)</string>
    <string name="investment_lockup_period1">锁定期</string>
    <string name="investment_total_financing">融资总额 (元)</string>
    <string name="investment_transferable">可转让</string>
    <string name="investment_monthly_payments">定期付息</string>
    <string name="investment_repayment">到期还本付息</string>
    <string name="investment_loan">放款</string>
    <string name="investment_amount">起投金额 (元)</string>
    <string name="investment_hold_flexible">持有灵活</string>
    <string name="transfer_check_all">全选</string>
    <string name="investment_trans_next">下一步</string>
    <string name="total_transfer_amount">转让金额合计</string>
    <string name="investment_set_payword">请设置交易密码</string>
    <string name="investment_bid_card">您还没有绑定银行卡，去绑定？</string>
    <string name="investment_open_deposit">平台已接入上饶银行资金存管系统、充值投资、提现等资金操作均需通过存管账户完成，支持多家银行储存卡。\n(暂不支持：农业银行、民生银行、华夏银行、招商银行)</string>
    <string name="investment_invest">投资</string>
    <string name="investment_need_recharge">需充值</string>
    <string name="contact_office_web">官方网址</string>
    <string name="office_web">www.56p2b.com</string>
    <string name="contact_server_phone">客服电话</string>
    <string name="server_phone">4000-8555-60</string>
    <string name="contact_weChat_official_account">微信公众号</string>
    <string name="contact_wechat_official_account">CHDmoney</string>
    <string name="contact_sina_blog">新浪微博</string>
    <string name="contact_service_email">客服邮箱</string>
    <string name="contact_business_email">商务邮箱</string>
    <string name="contact_company_address">公司地址</string>
    <string name="product_investment_limit_time">【投资期限】</string>
    <string name="product_expect_earn_rule">【预期收益规则】</string>
    <string name="product_transfer_rule">【转让规则】</string>
    <string name="product_invest_rule">【投资规则】</string>
    <string name="product_know_zqzr">【了解债权转让】</string>
    <string name="product_zqzr_know_introduce" formatted="false">&#160;&#160;&#160;&#160;&#160;&#160;&#160;债权转让是56金服为方便用户投资而推出的投资项目，出借人急需要资金时，可以通过转让其在平台拥有的符合条件的标的债权给其他出借人，转让成功后可获得流动资金。该项目享有预期年化收益12%。</string>
    <string name="product_zqzr_invest_rule" formatted="false">&#160;&#160;&#160;&#160;&#160;&#160;&#160;订单将按照100的倍数递增投资，若低于100金额的订单需整笔订单投资。</string>
    <string name="product_zqzr_investment_limit_time" formatted="false">&#160;&#160;&#160;&#160;&#160;&#160;&#160;最短持有30天，最长投资期限360天，若期间标的到期将自动回款。 </string>
    <string name="product_zqzr_expect_earn_rule" formatted="false">&#160;&#160;&#160;&#160;&#160;&#160;&#160;1.投资当日开始计息，每日按预期收益率12%计息。 \n\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;2.当原匹配债权到期时，系统将本金连同利息一起结算到用户余额中。 \n\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;3.用户收益将于投资后每隔 30 天为周期结算，本金及剩余收益将在用户投资到期或成功转让后结算到用户余额中，转让期间正常计息。</string>
    <string name="product_zqzr_transfer_rule" formatted="false">&#160;&#160;&#160;&#160;&#160;&#160;&#160;1.投资30天后，用户可申请转让。 \n\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;2.转让期限为T+5个工作日，转让本金在转让期间仍计息，转让成功当日不计息。当日22点前转让成功的当日回款。 \n\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;3.转让手续费按年化3%扣取。\n\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;4.单笔转让，用户可能会出现部分转让成功，部分转让失败，属于正常情况。</string>
    <string name="product_know_jwy">【了解季无忧】</string>
    <string name="product_jwy_know_jwy_introduc" formatted="false">&#160;&#160;&#160;&#160;&#160;&#160;&#160;季无忧是56金服推出90天期限的投资项目。所有资金均由用户投资到平台推荐的优质中小企业经营周转借款标的中，到期享有预期年化收益10%，到期前不可申请转让。</string>
    <string name="product_jwy_transfer_rule" formatted="false">&#160;&#160;&#160;&#160;&#160;&#160;&#160;本项目不支持债权转让。</string>
    <string name="product_jwy_invest_limit_time">放款后开始正式计息和统计天数，期限90天。</string>
    <string name="product_jwy_expect_earn_rule" formatted="false">&#160;&#160;&#160;&#160;&#160;&#160;&#160;1.放款前，每日按预期年化收益8%补贴。 \n\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;2.放款后，每日按预期年化收益10%计算利息。 \n\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;3.所有收益将在用户投资到期时和本金一起结算到用户余额中。</string>
</resources>