<?xml version="1.0" encoding="utf-8"?>
<com.chd.chd56lc.widget.InvestScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22.5dp"
            android:layout_marginTop="30dp"
            android:drawablePadding="5dp"
            android:text="@string/product_know_zqzr"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/txt_12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17.5dp"
            android:layout_marginStart="22.5dp"
            android:layout_marginTop="10dp"
            android:text="@string/product_zqzr_know_introduce"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/txt_10sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22.5dp"
            android:layout_marginTop="20dp"
            android:drawablePadding="5dp"
            android:text="@string/product_investment_limit_time"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/txt_12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17.5dp"
            android:layout_marginStart="22.5dp"
            android:layout_marginTop="10dp"
            android:text="@string/product_zqzr_investment_limit_time"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/txt_10sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22.5dp"
            android:layout_marginTop="20dp"
            android:drawablePadding="5dp"
            android:text="@string/product_invest_rule"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/txt_12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17.5dp"
            android:layout_marginStart="22.5dp"
            android:layout_marginTop="10dp"
            android:text="@string/product_zqzr_invest_rule"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/txt_10sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22.5dp"
            android:layout_marginTop="20dp"
            android:drawablePadding="5dp"
            android:text="@string/product_expect_earn_rule"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/txt_12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17.5dp"
            android:layout_marginStart="22.5dp"
            android:layout_marginTop="10dp"
            android:text="@string/product_zqzr_expect_earn_rule"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/txt_10sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22.5dp"
            android:layout_marginTop="20dp"
            android:drawablePadding="5dp"
            android:text="@string/product_transfer_rule"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/txt_12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17.5dp"
            android:layout_marginStart="22.5dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="20dp"
            android:text="@string/product_zqzr_transfer_rule"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/txt_10sp" />
    </LinearLayout>
</com.chd.chd56lc.widget.InvestScrollView>