<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.chd.chd56lc.ui.activity.personCenter.RegisterActivity">

    <include layout="@layout/include_title_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/color_ffffff"
        android:paddingTop="34dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="58dp"
            android:src="@mipmap/img_ld_logo" />

    </RelativeLayout>

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="13dp"
        android:background="@null"
        android:hint="@string/phone"
        android:inputType="number"
        android:maxLength="11"
        android:padding="4dp"
        android:textColor="@color/color_333333"
        android:textColorHint="@color/color_cccccc"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="5dp"
        android:background="@color/color_999999" />

    <TextView
        android:id="@+id/btn_use_invitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:text="@string/text_invitation_code"
        android:textColor="@color/color_999999"
        android:textSize="14sp"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/rl_invitation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:id="@+id/btn_unuse_invitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="26dp"
            android:text="@string/register_nouser_invitation_code"
            android:textColor="@color/color_999999"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_invitation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="13dp"
            android:layout_toStartOf="@+id/btn_unuse_invitation"
            android:background="@null"
            android:hint="@string/hint_input_invitation"
            android:inputType="number"
            android:maxLength="11"
            android:padding="4dp"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_cccccc"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignEnd="@+id/et_invitation"
            android:layout_alignStart="@+id/et_invitation"
            android:layout_below="@id/et_invitation"
            android:layout_marginTop="5dp"
            android:background="@color/color_999999" />

    </RelativeLayout>

    <TextView
        android:id="@+id/btn_register"
        android:layout_width="250dp"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="38dp"
        android:background="@drawable/btn_login_selected"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/btn_new_register"
        android:textColor="@color/color_ffffff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/btn_register_protocol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:gravity="center"
        android:text="@string/text_register_protocol"
        android:textColor="@color/color_999999"
        android:textSize="12sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/btn_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/text_have_count"
            android:textColor="@color/color_999999"
            android:textSize="12sp" />
    </FrameLayout>
</LinearLayout>
