<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="278dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/login_second_login_background"
        android:paddingLeft="19dp"
        android:paddingRight="19dp">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:digits="@string/filter_vcode"
            android:hint="@string/hint_set_password"
            android:inputType="textWebPassword"
            android:maxLength="20"
            android:singleLine="true"
            android:tag="invisible"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_cccccc"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_visible"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/btn_txyzm_yj_pre" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_error_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/hint_password_rule"
        android:textColor="@color/color_999999"
        android:textSize="10sp"
        android:visibility="visible" />

</LinearLayout>